# python-sports-updater

./: pyproject.toml  scoreboard.json  todo.txt
other/: plasmoid.py  plasmoid.spec  scoreReader.py  scoreReader1.py  starter.sh
src/: sports_updater.spec
src/sports_updater/: main.qml  plasmoid.py  plasmoid.spec  scoreReader.py
